tests/baselines/reference/numberAssignableToEnumInsideUnion.errors.txt
numberAssignableToEnumInsideUnion.ts(3,5): error TS2322: Type 'number' is not assignable to type 'boolean | E'.


==== numberAssignableToEnumInsideUnion.ts (1 errors) ====
    enum E { A, B }
    let n: number;
    let z: E | boolean = n;
        ~
!!! error TS2322: Type 'number' is not assignable to type 'boolean | E'.
    